--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,8 @@
    "outputs": [],
    "source": [
     "#Note: this cell won't return a valid response unless you specify your api key\n",
-    "api_key = \n",
+    "api_key = F8zRphNUA3_KsClfINoGcYiMTsjEQ_BiscQNBmztrgRh3fEHf0X5HGmdptipmFZ95lmDoqWgUKWecQGaIsKQEjNdWR_M_Xn6lCh8MY0Ldj4v2M4M2mkNPd-NfDESXXYx\n",
+    "\n",
     "url = 'https://api.yelp.com/v3/businesses/search'\n",
     "\n",
     "headers = {\n",
