Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -87,24 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'F8zRphNUA3_KsClfINoGcYiMTsjEQ_BiscQNBmztrgRh3fEHf0X5HGmdptipmFZ95lmDoqWgUKWecQGaIsKQEjNdWR_M_Xn6lCh8MY0Ldj4v2M4M2mkNPd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-936139f5ae6b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Note: this cell won't return a valid response unless you specify your api key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mapi_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF8zRphNUA3_KsClfINoGcYiMTsjEQ_BiscQNBmztrgRh3fEHf0X5HGmdptipmFZ95lmDoqWgUKWecQGaIsKQEjNdWR_M_Xn6lCh8MY0Ldj4v2M4M2mkNPd\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mNfDESXXYx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'https://api.yelp.com/v3/businesses/search'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m headers = {\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'F8zRphNUA3_KsClfINoGcYiMTsjEQ_BiscQNBmztrgRh3fEHf0X5HGmdptipmFZ95lmDoqWgUKWecQGaIsKQEjNdWR_M_Xn6lCh8MY0Ldj4v2M4M2mkNPd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Note: this cell won't return a valid response unless you specify your api key\n",
-    "api_key = 'F8zRphNUA3_KsClfINoGcYiMTsjEQ_BiscQNBmztrgRh3fEHf0X5HGmdptipmFZ95lmDoqWgUKWecQGaIsKQEjNdWR_M_Xn6lCh8MY0Ldj4v2M4M2mkNPd-NfDESXXYx\"\n",
+    "api_key = 'F8zRphNUA3_KsClfINoGcYiMTsjEQ_BiscQNBmztrgRh3fEHf0X5HGmdptipmFZ95lmDoqWgUKWecQGaIsKQEjNdWR_M_Xn6lCh8MY0Ldj4v2M4M2mkNPd-NfDESXXYx'\n",
     "url = 'https://api.yelp.com/v3/businesses/search'\n",
     "\n",
     "headers = {\n",
