--- a/index.ipynb
+++ b/index.ipynb
@@ -114,12 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-5-48241a7cb30e>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-48241a7cb30e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    api_key = 'F8zRphNUA3_KsClfINoGcYiMTsjEQ_BiscQNBmztrgRh3fEHf0X5HGmdptipmFZ95lmDoqWgUKWecQGaIsKQEjNdWR_M_Xn6lCh8MY0Ldj4v2M4M2mkNPd-NfDESXXYx\u001b[0m\n\u001b[0m                                                                                                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "#Note: this cell won't return a valid response unless you specify your api key\n",
-    "api_key = ''\n",
+    "api_key = 'F8zRphNUA3_KsClfINoGcYiMTsjEQ_BiscQNBmztrgRh3fEHf0X5HGmdptipmFZ95lmDoqWgUKWecQGaIsKQEjNdWR_M_Xn6lCh8MY0Ldj4v2M4M2mkNPd-NfDESXXYx\n",
+    "\n",
+    "\n",
+    "'\n",
     "\n",
     "url = 'https://api.yelp.com/v3/businesses/search'\n",
     "\n",
