--- a/index.ipynb
+++ b/index.ipynb
@@ -128,10 +128,7 @@
    ],
    "source": [
     "#Note: this cell won't return a valid response unless you specify your api key\n",
-    "api_key = 'F8zRphNUA3_KsClfINoGcYiMTsjEQ_BiscQNBmztrgRh3fEHf0X5HGmdptipmFZ95lmDoqWgUKWecQGaIsKQEjNdWR_M_Xn6lCh8MY0Ldj4v2M4M2mkNPd-NfDESXXYx\n",
-    "\n",
-    "\n",
-    "'\n",
+    "api_key = 'F8zRphNUA3_KsClfINoGcYiMTsjEQ_BiscQNBmztrgRh3fEHf0X5HGmdptipmFZ95lmDoqWgUKWecQGaIsKQEjNdWR_M_Xn6lCh8MY0Ldj4v2M4M2mkNPd-NfDESXXYx'\n",
     "\n",
     "url = 'https://api.yelp.com/v3/businesses/search'\n",
     "\n",
